<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.maricool.carcare.ui.welcome.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".ui.welcome.WelcomeScreenFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.93" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:srcCompat="@drawable/app_logo_colored" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_welcome"
            android:textColor="@color/onBackground"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_short_title"
            android:textColor="@color/textColorOnBackground"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/welcome_message"
            app:layout_constraintStart_toStartOf="@+id/welcome_message"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            android:background="@drawable/button_background_blu"
            android:fontFamily="@font/poppins_medium"
            android:onClick="@{() -> viewModel.goToCreateAccountPressed()}"
            android:text="@string/create_your_account"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_25"
            android:layout_marginEnd="@dimen/size_20"
            android:background="@drawable/button_background_white"
            android:fontFamily="@font/poppins_medium"
            android:onClick="@{() -> viewModel.goToLoginPressed()}"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ask_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/get_questions"
            android:textColor="@color/textColorOnBackground"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintEnd_toStartOf="@+id/ask_here"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ask_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ask_here"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintBottom_toBottomOf="@+id/ask_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ask_question"
            app:layout_constraintTop_toTopOf="@+id/ask_question" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>