<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.maricool.carcare.ui.create_account.SignupViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/background"
        android:gravity="center"
        tools:context=".ui.login.LoginFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Your Account"
            android:textSize="25sp"
            android:layout_marginBottom="@dimen/size_20"
            android:fontFamily="@font/poppins_bold"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/size_20"
            android:textColor="@color/onBackground"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/text_size_15" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@={viewmodel.displayNameText}"
            android:background="@drawable/text_input_drawable"
            android:padding="10dp"
            android:drawablePadding="15dp"
            android:textCursorDrawable="@null"
            android:layout_marginBottom="@dimen/size_20"
            android:inputType="text|textNoSuggestions"
            android:textColor="@color/onBackground"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            android:textSize="@dimen/text_size_18"
            android:drawableStart="@drawable/name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/text_size_15" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:text="@={viewmodel.emailText}"
            android:textCursorDrawable="@null"
            android:background="@drawable/text_input_drawable"
            android:padding="10dp"
            android:drawablePadding="15dp"
            android:layout_marginBottom="@dimen/size_20"
            android:textColor="@color/onBackground"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            android:textSize="@dimen/text_size_18"
            android:drawableStart="@drawable/email" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/text_size_15" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/text_input_drawable"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            android:inputType="number"
            android:text="@={viewmodel.userPhone}"
            android:layout_marginBottom="@dimen/size_20"
            android:textColor="@color/onBackground"
            android:drawablePadding="15dp"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            android:textSize="@dimen/text_size_18"
            android:drawableStart="@drawable/phone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/text_size_15" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="#D9D9D9"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:background="@color/background"
            app:boxCornerRadiusBottomEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:passwordToggleTint="@color/onBackground"
            android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/text_input_drawable"
            android:padding="10dp"
            android:layout_marginBottom="@dimen/size_20"
            android:textColor="@color/onBackground"
            android:textCursorDrawable="@null"
            android:drawablePadding="15dp"
            android:text="@={viewmodel.passwordText}"
            android:inputType="textPassword"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            android:textSize="@dimen/text_size_18"
            android:drawableStart="@drawable/password" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/text_size_15" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="#D9D9D9"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:background="@color/background"
            app:boxCornerRadiusBottomEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:passwordToggleTint="@color/onBackground"
            android:layout_marginBottom="36dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/text_input_drawable"
            android:padding="10dp"
            android:drawablePadding="15dp"
            android:textCursorDrawable="@null"
            android:layout_marginBottom="@dimen/size_20"
            android:text="@={viewmodel.secondPassword}"
            android:textColor="@color/onBackground"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_18"
            android:drawableStart="@drawable/password" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:drawablePadding="15dp"
            android:layout_marginTop="@dimen/size_35"
            android:enabled="@{!viewmodel.mIsCreatingAccount}"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/background"
            android:textAllCaps="false"
            android:onClick="@{() -> viewmodel.createAccountPressed()}"
            android:drawableEnd="@drawable/arrow"
            android:id="@+id/next"
            android:paddingEnd="@dimen/size_20"
            android:paddingStart="@dimen/size_20"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/button_background_blu" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ask_question"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/get_questions"
                android:textColor="@color/textColorOnBackground"
                android:textSize="@dimen/text_size_15"
                android:layout_marginEnd="3dp"
                app:layout_constraintEnd_toStartOf="@+id/ask_here"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ask_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/ask_here"
                android:textColor="@color/onBackground"
                android:textSize="@dimen/text_size_15"
                app:layout_constraintBottom_toBottomOf="@+id/ask_question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ask_question"
                app:layout_constraintTop_toTopOf="@+id/ask_question" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>